src/stage1/vs/work-01/vs-dr-orlando-service-1-100.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-vs
spec:
  hosts:
   - service
  http:
  - route:
    - destination:
        host: service
        subset: orlando-service-1

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-dr
spec:
  host: service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: orlando-service-1
    labels:
      cluster: orlando-service-1
